tests/error07.stl

type Foo = Unit

type Foo = <Other>

